<resources>
    <string name="auth_invalid_credentials">Invalid email/password combination</string>
    <string name="auth_invalid_fields">Invalid entries! Please fill all fields.</string>
    <string name="auth_password_mismatch">Passwords do not match!</string>
    <string name="auth_email_collision">A user with this email already exists!</string>
    <string name="auth_weak_password">Please provide a password with at least 6 characters!</string>
    <string name="complete_hours_first">Please fill existing slots first!</string>
    <string name="invalid_hours">Please ensure all end times are after start times!</string>
    <string name="empty_fields">Please select resources or add dates!</string>
    <string name="invalid_resource_count">Please enter resource counts!</string>

    <string name="app_name">Food For Thought.</string>
    <string name="app_subtitle">Give back to your community</string>
    <string name="app_sign_up">Sign Up</string>
    <string name="app_log_in">Log In</string>
    <string name="sign_up_login_text">Already have an account? Log In</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="birthday">Date of Birth</string>
    <string name="phone_number">Phone Number</string>

    <string name="title_activity_maps">Main</string>
    <string name="Open">My Application</string>
    <string name="Close">My Application</string>
    <string name="search_map_hint">Enter Your City</string>


    <string name="pantry_details">PantryDetails</string>
    <string name="contribute_activity">Contribute activity</string>
    <string name="contribute">Contribute</string>
    <string name="enter_count">Enter count</string>

    <string name="submit_title">Your Request Was Submitted</string>
    <string name="submit_subtitle">Please wait to be contacted by the\norganization by email.</string>

    <string name="call">Call</string>
    <string name="directions">Directions</string>
    <string name="website">Website</string>
    <string name="pantry_volunteer_logo">Pantry Volunteer Logo</string>
    <string name="_09_00_14_00_on_mm_dd_yyyy">09:00 - 14:00 on MM/DD/YYYY</string>
    <string name="sample_pantry">Sample Pantry</string>
    <string name="NO_HOURS_DISPLAY_TEXT">Unavailable</string>

    <string-array name="mtthf_time_array">
    </string-array>

    <string-array name="w_time_array">
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
    </string-array>

    <string-array name="ss_time_array">
        <item>07:00</item>
        <item>07:30</item>
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
    </string-array>

    <string-array name="day_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>


</resources>