<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitActivity">

    <ImageView
        android:id="@+id/webIcon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mapIcon2"
        app:layout_constraintTop_toBottomOf="@+id/submit_subtitle"
        app:srcCompat="@drawable/ic_baseline_web_24" />

    <ImageView
        android:id="@+id/phoneIcon2"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mapIcon2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_subtitle"
        app:srcCompat="@drawable/ic_baseline_call_24" />

    <TextView
        android:id="@+id/submit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="110dp"
        android:layout_height="110dp"
        app:layout_constraintBottom_toTopOf="@+id/submit_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811"
        app:srcCompat="@drawable/success" />

    <TextView
        android:id="@+id/submit_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_subtitle"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />

    <Button
        android:id="@+id/submit_ok"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@android:string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/submit_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call"
        android:textAllCaps="true"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/phoneIcon2"
        app:layout_constraintStart_toStartOf="@+id/phoneIcon2"
        app:layout_constraintTop_toBottomOf="@+id/phoneIcon2" />

    <TextView
        android:id="@+id/submit_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:textAllCaps="true"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/webIcon"
        app:layout_constraintStart_toStartOf="@+id/webIcon"
        app:layout_constraintTop_toBottomOf="@+id/webIcon" />

    <TextView
        android:id="@+id/submit_directions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/directions"
        android:textAllCaps="true"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapIcon2" />

    <ImageView
        android:id="@+id/mapIcon2"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/webIcon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/phoneIcon2"
        app:layout_constraintTop_toBottomOf="@+id/submit_subtitle"
        app:srcCompat="@drawable/ic_baseline_map_24" />

</androidx.constraintlayout.widget.ConstraintLayout>